--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mkdirp": "*",
     "mocha": "^3.4.2",
     "moment": "^2.18.1",
+    "moment-timezone": "^0.5.34",
     "mongoose": "^4.12.0",
     "morgan": "^1.8.2",
     "natives": "^1.1.6",
