--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mkdirp": "*",
     "mocha": "^3.4.2",
     "moment": "^2.18.1",
+    "moment-timezone": "^0.5.34",
     "mongoose": "^4.12.0",
     "morgan": "^1.8.2",
     "natives": "^1.1.6",
@@ -42,6 +43,7 @@
     "request-ip": "^2.0.2",
     "sinon": "^2.3.4",
     "socket.io": "^2.0.3",
+    "crypto-js": "^4.1.1",
     "socket.io-client": "^2.0.3",
     "socket.io-stream": "*",
     "socketio-file-upload": "^0.6.0",
